Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="biography__image">
-                    <img src="https://pplx-res.cloudinary.com/image/upload/v1753443118/pplx_project_search_images/6eb5feaf716dece742a1128b11512662bb6b5295.jpg" alt="Behind the scenes of Bollywood film making" class="biography__img">
+                    <img src="IMG-20220420-WA0066.jpg" alt="Behind the scenes of Bollywood film making" class="biography__img">
                 </div>
             </div>
         </div>
