deleted:    IMG-20220420-WA0066.jpg

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="hero__image">
-                <img src="https://media.licdn.com/dms/image/v2/C5103AQExdI6Wor50xQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1533553028998?e=2147483647&v=beta&t=q6ta2Lcv6UA7KE3ij_mQY3vfR-zqOrVskSHtAZV5kZw" alt="Ramesh R Sharma - Professional Portrait" class="hero__img">
+                <img src="https://res.cloudinary.com/dipuhwwmz/image/upload/v1766900320/IMG-20210510-WA0031_qj7vcw.jpg" alt="Ramesh R Sharma - Professional Portrait" class="hero__img">
             </div>
         </div>
     </section>
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="biography__image">
-                    <img src="IMG-20220420-WA0066.jpg" alt="Behind the scenes of Bollywood film making" class="biography__img">
+                    <img src="https://res.cloudinary.com/dipuhwwmz/image/upload/v1766901441/DSC08995_lnmion.jpg" alt="Behind the scenes of Bollywood film making" class="biography__img">
                 </div>
             </div>
         </div>
@@ -269,6 +269,10 @@
                 <h3>Films as Assistant Director</h3>
                 <div class="film-grid">
                     <div class="film-card">
+                        <h4>Baghban (2003)</h4>
+                        <p class="film-role">Assistant Director</p>
+                    </div>
+                    <div class="film-card">
                         <h4>BoyFriend (1993)</h4>
                         <p class="film-role">Third Assistant Director</p>
                     </div>
@@ -279,14 +283,44 @@
                     <div class="film-card">
                         <h4>Ganga aur Gayatri</h4>
                         <p class="film-role">Associate Director</p>
+                    </div>                    
+                </div>
+            </div>
+
+            <div class="filmography__category">
+                <h3>TV Serials as Assistant Director</h3>
+                <div class="film-grid">
+                    <div class="film-card">
+                        <h4>Mahabharat (1990)</h4>
+                        <p class="film-role">Assistant Director</p>
                     </div>
                     <div class="film-card">
-                        <h4>Baghban (2003)</h4>
+                        <h4>Jhansi Ki Rani (1995-1996)</h4>
+                        <p class="film-role">Assistant Director</p>
+                    </div>
+                    <div class="film-card">
+                        <h4>Vishnu Puran</h4>
+                        <p class="film-role">Associate Director</p>
+                    </div>
+                    <div class="film-card">
+                        <h4>Kanoon (1993-1996)</h4>
+                        <p class="film-role">Assistant Director</p>
+                    </div>
+                    <div class="film-card">
+                        <h4>Aurat (1997)</h4>
+                        <p class="film-role">Assistant Director</p>
+                    </div>
+                    <div class="film-card">
+                        <h4>EK Aur Mahabharat</h4>
+                        <p class="film-role">Assistant Director</p>
+                    </div>
+                    <div class="film-card">
+                        <h4>Mai Dilli Hoon</h4>
                         <p class="film-role">Assistant Director</p>
                     </div>
                 </div>
             </div>
-
+            
             <div class="filmography__category">
                 <h3>Independent Direction</h3>
                 <div class="film-grid">
@@ -340,7 +374,7 @@
                 <div class="tv-featured">
                     <div class="featured-serial">
                         <div class="featured-serial__image">
-                            <img src="https://pplx-res.cloudinary.com/image/upload/v1749095919/pplx_project_search_images/f785bc0d508aba858f6b6a1ce925ce6353a18902.jpg" alt="Mahabharat TV Serial Poster" class="featured-img">
+                            <img src="https://m.media-amazon.com/images/M/MV5BYzZiY2QyNTMtNTMzMi00ODZkLWEwNWItYmJiM2MyNWJmY2Q5XkEyXkFqcGc@._V1_.jpg" alt="Mahabharat TV Serial Poster" class="featured-img">
                         </div>
                         <div class="featured-serial__content">
                             <h3>Mahabharat (1990)</h3>
@@ -357,6 +391,17 @@
                             <h3>Jhansi Ki Rani (1995-1996)</h3>
                             <p class="role-badge">Assistant Director</p>
                             <p>Contributed to the historic television series about the valiant queen Rani Lakshmibai of Jhansi.</p>
+                        </div>
+                    </div>
+
+                    <div class="featured-serial">
+                        <div class="featured-serial__image">
+                            <img src="https://m.media-amazon.com/images/M/MV5BMTg3ZmYzOGItMzVkZi00NmZjLTg3ZmEtNGY0MTcyMmRmODA5XkEyXkFqcGc@._V1_.jpg" alt="Vishnu Puran TV Serial Poster" class="featured-img">
+                        </div>
+                        <div class="featured-serial__content">
+                            <h3>Vishnu Puran</h3>
+                            <p class="role-badge">Assistant Director</p>
+                            <p>Worked on the legendary B.R. Chopra's epic television series that became a cultural phenomenon in India.</p>
                         </div>
                     </div>
                 </div>
