--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramesh R Sharma - Film Director, Writer, Assistant Director</title>
+    <title>Ramesh Sharma – Director & Filmmaker</title>
+    <meta name="google-site-verification" content="aYmQDsbMrPYSjrFcQmcEIbaAyDgG86UAlnyJmtM0cLc" />
+    <meta name="description" content="Official portfolio of Ramesh Sharma, Film Director specializing in short films, music videos and creative storytelling.">
+    <meta name="keywords" content="Ramesh Sharma, Film Director, Filmmaker India, Cinematic Videos, Music Video Director">
+    <meta property="og:title" content="Ramesh Sharma – Film Director">
+    <meta property="og:description" content="Filmmaker specializing in short films & music videos.">
+    <meta property="og:url" content="https://rameshsharma.vercel.app/">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="style.css">
     <style>
 /* TIMELINE COMPONENT RE-ENGINEERED */
